<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPS Monitor Tracker</string>
    <string name="title_section1">Locations</string>
    <string name="title_section2">Messages</string>
    <string name="title_section3">Cellulars</string>
    <string name="title_section4">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="msg_check_service_running">Service is running</string>
    <string name="msg_check_service_not_running">Service is not running</string>
    <string name="tv_services">Services</string>
    <string name="btn_start_service">Start Service</string>
    <string name="btn_stop_service">Stop Service</string>
    <string name="btn_check_service">Check Service</string>
    <string name="msg_service_started">Service Started</string>
    <string name="msg_service_stop">Service Stop</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="title_activity_locations">Locations</string>
    <string name="hello_world">Hello world!</string>
    <string name="alert_no_locations">No location has been set. Want to set a place now?</string>
    <string name="title_activity_backup">Settings</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_service">Service</string>
    <string name="title_activity_location">Locations</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="location_pt_latitude">latitude</string>
    <string name="location_pt_longitude">longitude</string>
    <string name="location_btn_get_location">Get Coordinates</string>
    <string name="location_ckb_is_notify">Is Notify</string>
    <string name="location_tv_messages">Messages</string>
    <string name="location_tv_limit_radius">Radius limit (in meters)</string>
    <string name="location_pt_radius">In meters</string>
    <string name="location_tv_cellulars">Cellulars</string>
    <string name="location_textview_name">Name</string>
    <string name="location_pt_name">example: Home</string>
    <string name="location_tv_new_location">New Location</string>
    <string name="location_tv_coordinates">Coordinates</string>
    <string name="title_activity_new_location">New Location</string>
    <string name="location_tv_locations">Locations</string>
    <string name="location_btn_new_location">New Location</string>
    <string name="location_btn_new_message">New Message</string>
    <string name="location_btn_new_cellular">New Cellular</string>
    <string name="title_activity_new_message">New Message</string>
    <string name="message_tv_direction">Direction</string>
    <string name="message_tv_location">Location</string>
    <string name="message_tv_message">Message</string>
    <string name="msg_direction_in">In</string>
    <string name="msg_direction_out">Out</string>
    <string name="message_btn_new_message">New Message</string>
    <string name="message_rb_direction_in">In</string>
    <string name="message_rb_direction_out">Out</string>
    <string name="message_spinner_location_prompt">Choose a location</string>
    <string name="message_spinner_direction_prompt">Choose a direction</string>
    <string name="title_activity_new_cellular">New Cellular</string>
    <string name="cellular_btn_new_cellular">New Cellular</string>
    <string name="cellular_tv_name">Name</string>
    <string name="cellular_tv_number">Number</string>
    <string name="cellullar_ckb_is_notify">Notify</string>
    <string name="cellular_tv_alert_is_notify">If disabled the number will not receive notifications from any location</string>
    <string name="cellullar_btn_save_cellular">Save</string>
    <string name="service_tv_settings">Settings</string>
    <string name="service_ckb_autostart">Auto start</string>
    <string name="service_tv_explain_autostart">By default it is enabled, to start with the program. If disabled, you must start the service after you start the program.</string>
    <string name="service_btn_start_service">Start Service</string>
    <string name="cellular_new_success">Mobile registered successfully</string>
    <string name="cellular_new_failed">Failed to register new phone</string>
    <string name="cellular_validation_alert">Fill out the fields</string>
    <string name="cellular_new_validation">Fill out the fields</string>
    <string name="message_new_message_failed">Failed to register new message</string>
    <string name="message_new_message_success">Successfully registered message!</string>
    <string name="message_btn_save_message">Save</string>
    <string name="message_new_message_validation">Please fill out the message field</string>
    <string name="title_activity_update_location">Update Location</string>
    <string name="location_btn_save_location">Save</string>
    <string name="location_tv_longitude">Longitude</string>
    <string name="location_tv_latitude">Latitude</string>
    <string name="location_template_item_latitude">Latitude:</string>
    <string name="location_template_item_longitude">Longitude:</string>
    <string name="location_template_item_radius">Radius limit:</string>
    <string name="location_template_item_last_msg_send">Last message send:</string>
    <string name="location_template_item_msg_in">Registered incoming message?</string>
    <string name="location_template_item_msg_out">Registered outgoing message?</string>
    <string name="message_template_item_id">Id:</string>
    <string name="message_template_item_text">Text:</string>
    <string name="message_template_item_direction">Direction:</string>
    <string name="message_template_item_location">Location</string>
    <string name="cellular_template_item_id">Id:</string>
    <string name="cellular_template_item_number">Number:</string>
    <string name="cellular_template_item_is_notify">Is notify?</string>
    <string name="cellular_template_item_name">Name:</string>
    <string name="settings_tv_import_data">Import data</string>
    <string name="settings_tv_explain_import_data">Use this option if you want to load data from another application</string>
    <string name="settings_btn_import">Import</string>
    <string name="settings_tv_export">Export data</string>
    <string name="settings_tv_explain_export_data">Use this option to generate data to load into another application or bakup</string>
    <string name="btn_export_data">Export</string>
    <string name="action_exit">Exit</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="update_button">Update</string>
    <string name="locations_popup_decision">Want to change or delete the selected group?</string>
    <string name="msg_save_xml_to_export">Was generated the gmtdata.xml file</string>
    <string name="msg_failed_save_xml_to_export">Failed created file gmtdata.xml to export data</string>
    <string name="location_toast_update_sucess">Update sucess!</string>
    <string name="location_toast_update_failed">Update failed</string>
    <string name="location_toast_delete_sucess">Delete success!</string>
    <string name="location_toast_delete_failed">Delete failed</string>
    <string name="location_toast_new_save_success">New successfully added location!</string>
    <string name="message_toast_delete_sucess">Message deleted successfully</string>
    <string name="message_toast_delete_failed">Failed to Delete Message</string>
    <string name="title_activity_update_message">Update Message</string>
    <string name="text_spinner_select">Please select...</string>
    <string name="message_toast_message_exists">This message already exists: </string>
    <string name="cellular_update_success">Update succesfully</string>
    <string name="cellular_update_failed">Update failed.</string>
    <string name="settins_popup_positive">Yes</string>
    <string name="settins_popup_negative">No</string>
    <string name="settins_popup_decision">Want to start the GPS service with the application?</string>
    <string name="msg_update_settings_success">Auto start updated succesfully</string>
    <string name="msg_update_settings_failed">Auto start updated failed</string>
    <string name="message_dataxmlservice_generate_success">Generated file in:</string>
    <string name="send_to">Send to</string>
    <string name="title_activity_import_data">ImportDataActivity</string>
    <string name="validation_null_location_msg">Please fill in all fields</string>
    <string name="location_tv_numbers_to_notify">List of numbers to notify</string>
    <string name="location_btn_edit_numbers_to_notify">Edit numbers</string>
    <string name="location_template_item_numbers_to_notify">Numbers notify:</string>
    <string name="location_template_item_no_numbers_to_notify">No numbers</string>
    <string name="title_activity_add_cellular_location">AddCellularLocationActivity</string>
    <string name="cellular_location_tv_cellulars">Numbers</string>
    <string name="cellular_location_list_cellulars">Numbers list</string>
    <string name="message_btn_add">Add List</string>
    <string name="location_toast_update_generic_error">Unexpected error.</string>
    <string name="cellular_new_validation_numbers">Invalid number</string>

</resources>
