<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_tv_import_data"
            android:id="@+id/textView"
            android:padding="5dp"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/settings_tv_explain_import_data"
            android:id="@+id/textView4"
            android:paddingLeft="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_btn_import"
            android:id="@+id/btnImportData"
            android:layout_gravity="center_horizontal"
            android:onClick="importData" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_tv_export"
            android:id="@+id/textView2"
            android:padding="5dp"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/settings_tv_explain_export_data"
            android:id="@+id/textView12"
            android:layout_gravity="center_horizontal|left"
            android:paddingLeft="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_export_data"
            android:id="@+id/btnExportData"
            android:layout_gravity="center_horizontal"
            android:onClick="exportData"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />
    </LinearLayout>
</ScrollView>