<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="fill_parent"
    tools:context="com.fd.gpsmonitortracker.NewMessageActivity"
    android:layout_width="fill_parent">

<LinearLayout
android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_tv_direction"
        android:id="@+id/textView2"
        android:padding="5dp"
        android:textSize="14dp" />

    <Spinner
        android:id="@+id/spinnerDirection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/message_spinner_direction_prompt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_tv_location"
        android:id="@+id/textView3"
        android:padding="5dp"
        android:textSize="14dp" />

    <Spinner
        android:id="@+id/spinnerLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/message_spinner_location_prompt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_tv_message"
        android:id="@+id/textView9"
        android:padding="5dp"
        android:textSize="14dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextNewMessageText"
        android:layout_gravity="center_horizontal"
        android:layout_weight="3.80"
        android:editable="true"
        android:autoText="true"
        android:lines="5"
        android:gravity="top" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_btn_save_message"
        android:textSize="14dp"
        android:id="@+id/btnSaveMessage"
        android:layout_gravity="center_horizontal"
        android:onClick="saveMessage"/>
</LinearLayout>
</ScrollView>