<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="fill_parent"
    tools:context="com.fd.gpsmonitortracker.NewLocationActivity"
    android:layout_width="fill_parent">


    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:padding="5dp"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_textview_name"
            android:id="@+id/textView8"
            android:padding="5dp"
            android:autoText="false"
            android:textSize="14dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextLocationName"
            android:textSize="13dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_tv_latitude"
            android:id="@+id/textView5"
            android:padding="5dp"
            android:textSize="14dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextLocationLatitude"
            android:textSize="13dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_tv_longitude"
            android:id="@+id/textView13"
            android:padding="5dp"
            android:textSize="14dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextLocationLongitude"
            android:textSize="13dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_btn_get_location"
            android:id="@+id/btnGetLocation"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:textSize="14dp"
            android:onClick="GetLocation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_tv_limit_radius"
            android:id="@+id/textView6"
            android:padding="5dp"
            android:textSize="14dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextLocationRadius"
            android:singleLine="false"
            android:textSize="13dp" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_ckb_is_notify"
            android:id="@+id/checkBoxLocationIsNotify"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textSize="13dp"
            android:textColor="#ff676767"
            android:enabled="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp" />


        <ExpandableListView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:id="@+id/expandableListViewCellularsLocations"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.61" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_btn_edit_numbers_to_notify"
            android:id="@+id/btnEditNumbers"
            android:onClick="editNumbers"
            android:textSize="14dp"
            android:layout_above="@+id/relativeLayout"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout"
            android:layout_below="@+id/scrollView"
            android:layout_alignParentStart="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_btn_save_location"
                android:id="@+id/btnSaveLocation"
                android:onClick="saveLocation"
                android:textSize="14sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:id="@+id/btnCancel"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textSize="14dp" />

        </RelativeLayout>


    </LinearLayout>


</ScrollView>

